@startuml
class Registro {
- String nombre
- String apellido
- String correo
- String carrera
- String gustos
+ String getNombre()
+ void setNombre(String)
+ String getApellido()
+ void setApellido(String)
+ String getCorreo()
+ void setCorreo(String)
+ String getCarrera()
+ void setCarrera(String)
+ String getGustos()
+ void setGustos(String)
}
class CRUDExample {
- JTable table
- DefaultTableModel model
- JTextField txtNombre
- void guardarRegistro()
- void modificarRegistro()
- void eliminarRegistro()
- void buscarRegistro()
- void limpiarCampos()
- void guardarRegistros()
- void cargarRegistros()
+ {static} void main(String[])
}


java.io.Serializable <|.. Registro
JFrame <|-- CRUDExample
@enduml